preview rotates like the active map

--- a/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.html
+++ b/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.html
@@ -6,7 +6,7 @@
 			(error)="imageSrc = errorSrc"
 			(load)="finishedLoadingImage()"
 			[class.loading]="loading"
-			[style.transform]="'rotate(' + kulolo + 'rad)'"
+			[style.transform]="'rotate(' + rotation + 'rad)'"
 		>
 		<p class="error-text" *ngIf="imageSrc === errorSrc">Preview is not available</p>
 		<ansyn-loader [show]="loading"></ansyn-loader>
