--- a/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.html
+++ b/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.html
@@ -1,12 +1,11 @@
 <div class="overlay-overview" (dblclick)="onDblClick()">
 	<main>
 		<img
-			*ngIf="imageSrc"
-			[src]="imageSrc"
-			(error)="imageSrc = errorSrc"
+			#img
+			(error)="img.src = errorSrc"
 			(load)="finishedLoadingImage()"
 			[class.loading]="loading">
-		<p class="error-text" *ngIf="imageSrc === errorSrc">Preview is not available</p>
+		<p class="error-text" *ngIf="img.src.includes(errorSrc)">Preview is not available</p>
 		<ansyn-loader [show]="loading"></ansyn-loader>
 	</main>
 	<footer>
