--- a/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.less
+++ b/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.less
@@ -12,6 +12,7 @@
 	user-select: none;
 	visibility: hidden;
 	opacity: 0;
+	overflow: hidden;
 	transform: translateY(calc(~"1px - 100%"));
 	transition: opacity @animation-duration, visibility calc(~"@{animation-duration} + 0.1s");
 
