calculating scope and area onDrawEndEvent

--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
@@ -75,6 +75,15 @@
 			top: calc(~'100% + 20px');
 		}
 
+		.value-area {
+			position: absolute;
+			bottom: calc(~'100% + 20px');
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			width: 100%;
+		}
+
 		form.annotation-label-edit {
 			width: 250px;
 			height: 32px;
