--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
@@ -17,6 +17,10 @@
 		</div>
 	</div>
 
+	<div class="value-area">
+		<div class="text-of-area">dasdasdasd</div>
+	</div>
+
 	<form class="annotation-label-edit" (ngSubmit)="updateLabel()" *ngIf="clickMenuProps.showLabel">
 		<input class="label-input" type="text" placeholder="{{clickMenuProps.label}}" [(ngModel)]="clickMenuProps.label"
 			   name="EditLabel">
