Angle calculation to preview (#1802)
* added activeMapId$ to overlay-overview.component

* preview rotates like the active map

* fixed single map scenario

* fix unit tests

* moved to hoveredOverlayPreview$ to effect

* merged with master

* after cr

* fix: cr request changes

* feat: overlays public_api

* fix(preview-north): moved preview north calculation to north-calculation plugin only!

* fix(preview-north): moved preview north calculation to north-calculation plugin only!

* fix(preview-north): moved preview north calculation to north-calculation plugin only!

* after CR 2

* after CR 2

* fixed projectio bug

* fixed tests

* fixed tests

--- a/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.html
+++ b/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.html
@@ -4,7 +4,8 @@
 			#img
 			(error)="img.src = errorSrc"
 			(load)="finishedLoadingImage()"
-			[class.loading]="loading">
+			[class.loading]="loading"
+			[style.transform]="'rotate(' + rotation + 'rad)'">
 		<p class="error-text" *ngIf="img.src.includes(errorSrc)">Preview is not available</p>
 		<ansyn-loader [show]="loading"></ansyn-loader>
 	</main>
