fix component mode

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -416,7 +416,7 @@
       }
     }
   },
-  "multipleOverlaysSource": {
+  "multipleOverlaysSourceConfig": {
     "IDAHO": {
       "whitelist": [
         {
