--- a/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.less
+++ b/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.less
@@ -27,6 +27,9 @@
 		position: relative;
 		main {
 			min-height: @image-height;
+			width: 100%;
+			display: flex;
+			justify-content: center;
 			// Prevent image overflow when the image is rotated, when the map is rotated
 			overflow: hidden;
 
