Collapsing and un-collapsing when clicking on the menu background. For now it is a simple CSS transition. It causes the map to stretch.

--- a/src/app/@ansyn/menu/menu/menu.component.less
+++ b/src/app/@ansyn/menu/menu/menu.component.less
@@ -21,6 +21,11 @@ div.menu-wrapper {
 		z-index: @z-index-menu;
 		width: @menu-width;
 		height: 100%;
+		transition: width 0.5s;
+
+		&.collapsed {
+			width: @menu-collapsed-width;
+		}
 
 		div.menu-btn {
 			position: relative;
@@ -67,6 +72,7 @@ div.menu-wrapper {
 			}
 		}
 	}
+
 	div.container {
 		position: absolute;
 
