refactor(overlay-overview): errorSrc to 'const'

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -116,8 +116,7 @@
     "schema": "layers"
   },
   "overlaysConfig": {
-    "limit": 249,
-    "overlayOverviewFailed": "assets/icons/preview-failed-to-find-overlay-preview.svg"
+    "limit": 249
   },
   "mapFacadeConfig": {
     "overlayCoverage": 0.1,
