Overlay overview improvements (#1810)
* 1 Handle better image url fetch stage, beside the image loading stage, so that the loading animation is seen during both stages.
2 Prevent image overflow when the image is rotated, when the map is rotated.
3 More standard host binding structure in ansyn-loader component

* tweaks

* override

* fix(overlay-overview): CR request changes

* refactor(overlay-overview): errorSrc to 'const'

--- a/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.less
+++ b/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.less
@@ -27,6 +27,11 @@
 		position: relative;
 		main {
 			min-height: @image-height;
+			width: 100%;
+			display: flex;
+			justify-content: center;
+			// Prevent image overflow when the image is rotated, when the map is rotated
+			overflow: hidden;
 
 			p.error-text {
 				top: 50px;
