feat(planet): transform delay multiple requests value to planet config

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1070,6 +1070,7 @@
       "Sentinel2L1C"
     ],
     "apiKey": "98d4e5a377594e7b80f692d9d487ff26",
-    "tilesUrl": "https://tiles.planet.com/data/v1/"
+    "tilesUrl": "https://tiles.planet.com/data/v1/",
+    "delayMultiple": 300
   }
 }
