Redraw the map at the end of the collapse/uncollapse transition

--- a/src/app/@ansyn/menu/menu/menu.component.html
+++ b/src/app/@ansyn/menu/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div class="menu-wrapper">
 
-	<div class="menu" #menu [class.expanded]="expand" [class.collapsed]="collapse" (click)="toggleMenuCollapse()">
+	<div class="menu" #menu [class.expanded]="expand" [class.collapsed]="collapse" (click)="startToggleMenuCollapse()">
 
 		<ng-container *ngIf="!collapse">
 
