fix: fetch once on planet

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -531,7 +531,7 @@
               "end": null
             }
           ],
-          "sensorNames": "{{ getv "/ansyn/overlay/planet/sensor/names" " [ null ]" }}" ,
+          "sensorNames": "[ \"PSScene3Band\",\"PSOrthoTile\",\"REOrthoTile\",\"REScene\",\"SkySatScene\",\"Landsat8L1G\",\"Sentinel2L1C\" ]",
           "coverage": [
             [
               [
@@ -912,52 +912,7 @@
           ]
         }
       ],
-      "blacklist": [
-        {
-          "name": "San Francisco",
-          "dates": [
-            {
-              "start": null,
-              "end": null
-            }
-          ],
-          "sensorNames": "[ null ]",
-          "coverage": [
-            [
-              [
-                [
-                  -122.4281,
-                  37.7068
-                ],
-                [
-                  -122.5048,
-                  37.7068
-                ],
-                [
-                  -122.5158,
-                  37.7835
-                ],
-                [
-                  -122.4062,
-                  37.8108
-                ],
-                [
-                  -122.3569,
-                  37.7287
-                ],
-                [
-                  -122.3898,
-                  37.7068
-                ],
-                [
-                  -122.4281,
-                  37.7068
-                ]
-              ]
-            ]
-          ]
-        }
-      ]
+      "blacklist": []
     },
     "OPEN_AERIAL": {
 		"whitelist": [
