fix: null on sensors

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -531,7 +531,7 @@
               "end": null
             }
           ],
-          "sensorNames": "[ \"PSScene3Band\",\"PSOrthoTile\",\"REOrthoTile\",\"REScene\",\"SkySatScene\",\"Landsat8L1G\",\"Sentinel2L1C\" ]",
+          "sensorNames": "{{ getv "/ansyn/overlay/planet/sensor/names" " [ null ]" }}" ,
           "coverage": [
             [
               [
