revert(): revent IOveraly interface

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -261,7 +261,7 @@
   },
   "statusBarConfig": {
     "toolTips": {
-      "orientation": "Overlay orientation",
+      "orientation": "IOverlay orientation",
       "geoFilter": "Geo filter",
       "geoFilterEdit": "Edit Geo filter",
       "geoFilterShow": "Show/hide Geo filter",
@@ -269,7 +269,7 @@
       "dataInputFilter": "Data Input Filter",
       "timeFilterEdit": "Edit time filter",
       "screenNumber": "Screen number",
-      "overlayCount": "Overlay count",
+      "overlayCount": "IOverlay count",
       "backwards": "Previous overlay",
       "forward": "Next overlay",
       "reset": "Reset timeline (according to the time filter)",
