--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -192,6 +192,11 @@
         "modelName": "bestResolution",
         "displayName": "Resolution",
         "type": "Slider"
+      },
+      {
+        "modelName": "cloudCoverage",
+        "displayName": "Cloud Coverage",
+        "type": "Slider"
       }
     ]
   },
