--- a/src/app/@ansyn/core/less/common.less
+++ b/src/app/@ansyn/core/less/common.less
@@ -1,18 +1,5 @@
 @import "z-index-globals";
-
-@status-color: rgba(0, 0, 0, 0.70);
-@timeline-color: #557f86;
-@status-bar-height: 35px;
-@source-type-notice-width: 40%;
-@welcome-notification-width: 30%;
-@map-search-box-width: 100px;
-@application-main-color: #27B2CF;
-@application-contrast-color: #d393e1;
-@overlays-dots-color: #d393e1;
-@overlays-dots-color-hover: #bd0fe2;
-@menu-width: 90px;
-@menu-color: #2E2D46;
-@timeline-area-height: 110px;
+@import "colors";
 
 .default-menu-item {
 	position: relative;
