--- a/src/app/@ansyn/overlays/components/timeline/timeline.component.less
+++ b/src/app/@ansyn/overlays/components/timeline/timeline.component.less
@@ -1,15 +1,11 @@
-@import "core/less/common";
+@import "core/less/colors";
 
-:host /deep/ circle.active {
-	r: 8 !important;
+circle.active {
 	fill: @application-main-color;
 	stroke: white;
 }
 
-:host /deep/ circle.displayed {
-	r: 8;
-}
-
-:host /deep/ circle.hover:not(.active), :host /deep/ circle.displayed:not(.active) {
+circle.hover:not(.active), circle.displayed:not(.active) {
 	fill: @overlays-dots-color-hover;
 }
+
