fix: context menu hack for <= 44 versions

--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
@@ -30,4 +30,6 @@
 
 <ansyn-overlay-overview></ansyn-overlay-overview>
 
-<router-outlet></router-outlet>
+<ng-container *ngIf="!componentMode">
+	<router-outlet></router-outlet>
+</ng-container>
