--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -21,6 +21,7 @@
 :host {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 14px;
+	direction: ltr;
 	div.app {
 		display: flex;
 		height: 100%;
