--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.html
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.html
@@ -23,7 +23,7 @@
 	</ng-template>
 </div>
 
-<ansyn-context-menu></ansyn-context-menu>
+<ansyn-context-menu *ngIf="renderContextMenu"></ansyn-context-menu>
 
 <ansyn-welcome-notification *ngIf="showWelcomeNotification$ | async"></ansyn-welcome-notification>
 
