build(): organize all ng-packagr.json files

--- a/src/app/@ansyn/assets/styles/styles.css
+++ b/src/app/@ansyn/assets/styles/styles.css
@@ -1,5 +1,6 @@
 @import "~ol/ol.css";
 @import "~flatpickr/dist/flatpickr.css";
+@import "~@ansyn/event-drops/style.css";
 @import "bootstrap/carousel.css";
 @import 'icons.css';
 @import "~primeng/resources/primeng.min.css";
