--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -368,6 +368,11 @@
 		"href": "https://github.com/ansyn/ansyn"
     }
   },
+  "loginConfig": {
+  	"baseUrl": "{{ getv "/ansyn/login/baseurl" "http://ansyn.io:9001/api/v1/login" }}",
+  	"active":  "{{ getv "/ansyn/login/active" "" }}",
+  	"authorizedPath": "/"
+  },
   "visualizersConfig": {
     "FrameVisualizer": {
       "colors": {
