fix: CR request changes

--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
@@ -68,7 +68,7 @@
 
 			<ng-container
 				*ngIf="alert.component; else textAlert"
-				[ansynAlertComponent]="{ component: alert.component, mapId: mapId }">
+				[ansynAlertComponent]="{ component: alert.component, mapId: mapId, overlay: overlay }">
 			</ng-container>
 
 			<ng-template #textAlert>
