refactor: reduce builer

--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -1,5 +1,9 @@
 @import 'core/less/common';
 
+//ansyn-popover.default-case div.pop-hover:hover .pop-content, .pop-content.visible {
+//	visibility: hidden !important;
+//}
+
 @keyframes pinned {
 	from {
 		transform: scale(1.1) translateX(-100px);
