--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -19,6 +19,22 @@
 }
 
 :host {
+	&.component {
+		.app{
+			ansyn-popover.default-case div.pop-hover:hover .pop-content, .pop-content.visible {
+				visibility: hidden !important;
+			}
+			div.menu {
+				ansyn-menu {
+					display: none;
+				}
+				ansyn-tools.ansynToolsAlone {
+					display: block;
+				}
+			}
+		}
+	}
+
 	font-family: 'Open Sans', sans-serif;
 	font-size: 14px;
 	direction: ltr;
