feat(status-bar): inActive prop on data-input-filters config

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -277,69 +277,75 @@
     },
     "dataInputFiltersConfig": {
       "PLANET": {
+        "inActive": "",
+        "treeViewItem": {
         "text": "Planet",
         "value": 1,
-        "collapsed":true,
-        "children": [
-          {
-            "text":"REScene",
-            "value": {
-              "sensorType": "REScene"
-            }
-          },
-          {
-            "text": "PSScene3Band",
-            "value": {
-              "sensorType": "PSScene3Band"
-            }
-          },
-		  {
-            "text": "PSOrthoTile",
-            "value": {
-              "sensorType": "PSOrthoTile"
-            }
-          },
-		  {
-            "text": "REOrthoTile",
-            "value": {
-              "sensorType": "REOrthoTile"
-            }
-          },
-		  {
-            "text": "SkySatScene",
-            "value": {
-              "sensorType": "SkySatScene"
-            }
-          },
-		  {
-            "text": "Landsat8L1G",
-            "value": {
-              "sensorType": "Landsat8L1G"
-            }
-          },
-		  {
-            "text": "Sentinel2L1C",
-            "value": {
-              "sensorType": "Sentinel2L1C"
-            }
+            "collapsed": true,
+            "children": [
+              {
+                "text": "REScene",
+                "value": {
+                  "sensorType": "REScene"
+                }
+              },
+              {
+                "text": "PSScene3Band",
+                "value": {
+                  "sensorType": "PSScene3Band"
+                }
+              },
+              {
+                "text": "PSOrthoTile",
+                "value": {
+                  "sensorType": "PSOrthoTile"
+                }
+              },
+              {
+                "text": "REOrthoTile",
+                "value": {
+                  "sensorType": "REOrthoTile"
+                }
+              },
+              {
+                "text": "SkySatScene",
+                "value": {
+                  "sensorType": "SkySatScene"
+                }
+              },
+              {
+                "text": "Landsat8L1G",
+                "value": {
+                  "sensorType": "Landsat8L1G"
+                }
+              },
+              {
+                "text": "Sentinel2L1C",
+                "value": {
+                  "sensorType": "Sentinel2L1C"
+                }
+              }
+            ]
           }
-        ]
-      },
-      "OPEN_AERIAL": {
-        "text":"OpenAerial",
-        "value": 1,
-        "collapsed": true,
-        "children": [
-          {
-            "text": "UAV",
-            "value": {
-              "sensorType": "UAV"
-            }
+        },
+        "OPEN_AERIAL": {
+          "inActive": "",
+          "treeViewItem": {
+            "text": "OpenAerial",
+            "value": 1,
+            "indeterminate": true,
+            "collapsed": true,
+            "children": [
+              {
+                "text": "UAV",
+                "value": {
+                  "sensorType": "UAV"
+                }
+              }
+            ]
           }
-        ]
+        }
       }
-    }
-
   },
   "coreConfig": {
 	"welcomeNotification": {
