Orientation from config (#1844)
* Update versions to 0.2.82

* feat: orientation from config( stringify )

* add orientation to tmpl

* fix: CR aot

* test(): stringify orientations provider

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -994,5 +994,6 @@
     "apiKey": "9cb5e69a1a334a0c9e99a5134b7bb63d",
     "tilesUrl": "https://tiles.planet.com/data/v1/",
     "delayMultiple": 300
-  }
+  },
+  "ORIENTATIONS": "[\"Align North\",\"User Perspective\",\"Imagery Perspective\"]"
 }
