feat(filters): hide filter component while meta shouldBeHidden

--- a/src/app/@ansyn/menu-items/filters/components/filter-container/filter-container.component.html
+++ b/src/app/@ansyn/menu-items/filters/components/filter-container/filter-container.component.html
@@ -17,7 +17,8 @@
 	</div>
 
 	<div class="fields" *ngIf="!showOnlyFavorite" #fields [@fieldsTrigger]="show">
-		<div *ngIf="metadataFromState" [ngSwitch]="metadataFromState?.type">
+		<div *ngIf="metadataFromState && !metadataFromState.shouldBeHidden()" [ngSwitch]="metadataFromState?.type">
+
 			<ansyn-enum-filter-container
 				*ngSwitchCase="'Enum'"
 				[isLongFiltersList]="isLongFiltersList"
