--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -277,7 +277,7 @@
     },
     "dataInputFiltersConfig": {
       "PLANET": {
-        "inActive": {{ getv "/ansyn/overlay/planet/inactive" "" }},
+        "inActive": {{ getv "/ansyn/overlay/planet/inactive" "false" }},
         "treeViewItem": {
         "text": "Planet",
         "value": 1,
@@ -329,7 +329,7 @@
           }
         },
         "OPEN_AERIAL": {
-          "inActive": {{ getv "/ansyn/overlay/open/aerial/inactive" "" }},
+          "inActive": {{ getv "/ansyn/overlay/open/aerial/inactive" "false" }},
           "treeViewItem": {
             "text": "OpenAerial",
             "value": 1,
@@ -516,7 +516,7 @@
       "blacklist": []
     },
     "PLANET": {
-	  "inActive": {{ getv "/ansyn/overlay/planet/inactive" "" }},
+	  "inActive": {{ getv "/ansyn/overlay/planet/inactive" "false" }},
       "whitelist": [
         {
           "name": "USA",
@@ -921,7 +921,7 @@
       "blacklist": []
     },
     "OPEN_AERIAL": {
-    	"inActive": {{ getv "/ansyn/overlay/open/aerial/inactive" "" }}
+    	"inActive": {{ getv "/ansyn/overlay/open/aerial/inactive" "true" }},
 		"whitelist": [
 			{
 				"name": "Entire Earth",
