fix: open aerial data input should be true by default

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -921,7 +921,7 @@
       "blacklist": []
     },
     "OPEN_AERIAL": {
-    	"inActive": {{ getv "/ansyn/overlay/open/aerial/inactive" "true" }},
+    	"inActive": {{ getv "/ansyn/overlay/open/aerial/inactive" "false" }},
 		"whitelist": [
 			{
 				"name": "Entire Earth",
