Inactive multiple overlays (#1846)
* Update versions to 0.2.82

* feat: multiple 'inactive'

* boolean confd

* revert multiple source provider file

* update toml

* multi source providers inActive

* add console warn for undefined config

* fix: open aerial data input should be true by default

* feat: disabled data input

* feat: disabled data input

--- a/src/app/@ansyn/status-bar/components/tree-view/tree-view.component.html
+++ b/src/app/@ansyn/status-bar/components/tree-view/tree-view.component.html
@@ -7,10 +7,16 @@
 		</div>
 		<div class="data-input-filters-buttons">
 			<ansyn-slider-checkbox [checked]="dataInputFiltersActive"
+								   [disabled]="!dataInputFiltersItems.length"
 								   (checkedChange)="activateDataInputFilters($event)"></ansyn-slider-checkbox>
 			<div>
-				<a (click)="onTreeViewClose()">Cancel</a>
-				<a class="ok-button" (click)="dataInputFiltersOk()">Ok</a>
+				<button>
+					<a (click)="onTreeViewClose()">Cancel</a>
+				</button>
+
+				<button [disabled]="!dataInputFiltersItems.length">
+					<a class="ok-button" (click)="dataInputFiltersOk()">Ok</a>
+				</button>
 			</div>
 		</div>
 	</div>
