remove sensors from toml

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -433,6 +433,7 @@
   },
   "multipleOverlaysSourceConfig": {
 	 "defaultProvider": {
+	 	"inActive": false,
 		"whitelist": [
 		  {
 			"name": "Entire Earth",
@@ -484,7 +485,7 @@
               "end": null
             }
           ],
-          "sensorNames": {{ getv "/ansyn/overlay/idaho/sensor/names" "[]" }},
+          "sensorNames": [null],
           "coverage": [
             [
               [
@@ -526,7 +527,7 @@
               "end": null
             }
           ],
-          "sensorNames": {{ if exists "/ansyn/overlay/planet/sensor/names" }}{{ getv "/ansyn/overlay/planet/sensor/names" }}{{ else }}[ "Landsat8L1G", "Sentinel2L1C" ]{{ end }},
+          "sensorNames": [ "Landsat8L1G", "Sentinel2L1C" ],
 		  "coverage": [[[[-126.73828125000001,48.195387408333374],[-51.32812500000002,47.9605023889151],[-80.24414062500001,24.166802085303246],[-125.94726562500003,30.41078179084589],[-126.73828125000001,48.195387408333374]]]]
         },
         {
@@ -537,7 +538,7 @@
               "end": null
             }
           ],
-          "sensorNames": {{ getv "/ansyn/overlay/planet/sensor/names" "[ null ]" }},
+          "sensorNames": [ null ],
           "coverage": [
             [
               [
@@ -931,7 +932,7 @@
 						"end": null
 					}
 				],
-				"sensorNames": {{ getv "/ansyn/overlay/open/aerial/sensor/names" "[ null ]" }},
+				"sensorNames": [ null ],
 				"coverage": [
 					[
 						[
