--- a/src/app/@ansyn/core/components/ansyn-loader/ansyn-loader.component.html
+++ b/src/app/@ansyn/core/components/ansyn-loader/ansyn-loader.component.html
@@ -2,4 +2,4 @@
 	<div class="loader-outter"></div>
 	<div class="loader-inner"></div>
 </div>
-<div class="text" [hidden]="!loaderText">{{loaderText}}<span>.</span><span>.</span><span>.</span></div>
+<ansyn-animated-ellipsis [text]="loaderText"></ansyn-animated-ellipsis>
