--- a/src/app/@ansyn/menu-items/filters/components/enum-filter-container/enum-filter-container.component.html
+++ b/src/app/@ansyn/menu-items/filters/components/enum-filter-container/enum-filter-container.component.html
@@ -1,5 +1,5 @@
 <div class="enum-fields-enumerator"
-	 *ngFor="let enumMetadata of metadata && metadata.enumsFields | mapIterator | sort | showMore:isLongFiltersList ">
+	 *ngFor="let enumMetadata of enumsFields | mapIterator | sort | showMore:isLongFiltersList ">
 
 	<div class="left-side">
 		<ansyn-checkbox
