--- a/src/app/@ansyn/menu-items/filters/components/filter-container/filter-container.component.html
+++ b/src/app/@ansyn/menu-items/filters/components/filter-container/filter-container.component.html
@@ -27,8 +27,7 @@
 				<ansyn-enum-filter-container
 					*ngSwitchCase="'Enum'"
 					[isLongFiltersList]="isLongFiltersList"
-					[model]="filter.modelName"
-					(onMetadataChange)="onMetadataChange($event)">
+					[model]="filter.modelName">
 				</ansyn-enum-filter-container>
 
 				<ansyn-slider-filter-container
