--- a/src/app/@ansyn/menu-items/filters/components/slider-filter-container/slider-filter-container.component.html
+++ b/src/app/@ansyn/menu-items/filters/components/slider-filter-container/slider-filter-container.component.html
@@ -3,20 +3,20 @@
 	<div class="left-side">
 		<div class="upper-row">
 			<div class="min">
-				{{metadata.min}}
+				{{modelObject.min}}
 			</div>
 			<div class="range">
 				{{getMinRangeValue(realRange[0])}} - {{getMaxRangeValue(realRange[1])}}
 			</div>
 			<div class="max">
-				{{metadata.max}}
+				{{modelObject.max}}
 			</div>
 		</div>
 
 		<p-slider class='slider' [ngModel]="rangeValues" [range]="true" (onSlideEnd)="handleChange($event)"
-				  [min]="factor * metadata.min" [max]="factor * metadata.max"></p-slider>
+				  [min]="factor * modelObject.min" [max]="factor * modelObject.max"></p-slider>
 	</div>
 
-	<ansyn-filter-counter [count]="metadata.count" [filteredCount]="metadata.filteredCount"></ansyn-filter-counter>
+	<ansyn-filter-counter [count]="modelObject.count" [filteredCount]="modelObject.filteredCount"></ansyn-filter-counter>
 
 </div>
