--- a/src/app/@ansyn/menu-items/uploads/components/uploads/uploads.component.html
+++ b/src/app/@ansyn/menu-items/uploads/components/uploads/uploads.component.html
@@ -26,7 +26,7 @@
 		<!--<span class="bar"></span>-->
 
 		<!--<label class="case-name" for="123">Title</label>-->
-
+		<button type="submit">Submit</button>
 	</form>
 
 	<!--<h3>platform</h3>-->
